Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46894

QWizard: shortcut for next-button doesn't work

XMLWordPrintable

    • 3b8f828174f08d9037a0947b8709648ac37cdc36

      The shortcut key "n" doesn't work in QWizard.
      I tried with our project and the example wizard found on your homepag http://doc.qt.io/qt-5/qtwidgets-dialogs-classwizard-example.html

        For Gerrit Dashboard: QTBUG-46894
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            Falbala Stefanie Engelhard
            Votes:
            4 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes